--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </svg><span>
             </button> -->
         <div class="collapse navbar-collapse" id="navbarsExample05">
-            <ul class="navbar-nav mr-auto">
+            <!--<ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="https://b.10999901.xyz/" target="_blant">博客</a>
                 </li>
@@ -85,7 +85,7 @@
                 <!-- <li class="nav-item">
                         <a class="nav-link" href="https://blog.5iux.cn/about" target="_blant">About</a>
                     </li> -->
-            </ul>
+            </ul>-->
             <style>
                 #he-plugin-simple {
                     z-index: 1000;
